// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permissions Empty gateway object in smaug configuration gives default permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "linkCheck",
    "series",
    "universe",
    "mood",
  ],
  "denyFields": Array [
    "HoldingsItem.reservable",
    "HoldingsResponse.reservable",
    "SearchResponse.creatorHit",
    "SearchResponse.seriesHit",
    "ComplexSearchResponse.creatorHit",
    "ComplexSearchResponse.seriesHit",
    "Manifestation.tableOfContents",
    "Manifestation.manifestationParts",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "WorkExtensionUnion",
    "MarcRecord",
    "CreatorInfo",
  ],
}
`;

exports[`Permissions Explicitly setting allowRootFields in gateway object in smaug configuration gives those permissions 1`] = `
Object {
  "allowRootFields": Array [
    "manifestation",
  ],
}
`;

exports[`Permissions Role from gateway object in smaug configuration gives the roles' permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "linkCheck",
    "series",
    "universe",
    "mood",
    "submitOrder",
  ],
  "denyFields": Array [
    "HoldingsItem.reservable",
    "HoldingsResponse.reservable",
    "SearchResponse.creatorHit",
    "SearchResponse.seriesHit",
    "ComplexSearchResponse.creatorHit",
    "ComplexSearchResponse.seriesHit",
    "Manifestation.tableOfContents",
    "Manifestation.manifestationParts",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "WorkExtensionUnion",
    "MarcRecord",
    "CreatorInfo",
    "WorkReview",
  ],
}
`;

exports[`Permissions Unknown role from gateway object in smaug configuration gives default permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "linkCheck",
    "series",
    "universe",
    "mood",
  ],
  "denyFields": Array [
    "HoldingsItem.reservable",
    "HoldingsResponse.reservable",
    "SearchResponse.creatorHit",
    "SearchResponse.seriesHit",
    "ComplexSearchResponse.creatorHit",
    "ComplexSearchResponse.seriesHit",
    "Manifestation.tableOfContents",
    "Manifestation.manifestationParts",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "WorkExtensionUnion",
    "MarcRecord",
    "CreatorInfo",
  ],
}
`;

exports[`Permissions admin set to true in smaug configuration 1`] = `
Object {
  "admin": true,
}
`;

exports[`Permissions no gateway object in smaug configuration gives default permissions 1`] = `
Object {
  "allowRootFields": Array [
    "debug",
    "draft",
    "manifestation",
    "manifestations",
    "search",
    "work",
    "works",
    "suggest",
    "complexSearch",
    "complexSearchIndexes",
    "complexSuggest",
    "localSuggest",
    "recommend",
    "recommendations",
    "infomedia",
    "refWorks",
    "ris",
    "elba",
    "library",
    "linkCheck",
    "series",
    "universe",
    "mood",
  ],
  "denyFields": Array [
    "HoldingsItem.reservable",
    "HoldingsResponse.reservable",
    "SearchResponse.creatorHit",
    "SearchResponse.seriesHit",
    "ComplexSearchResponse.creatorHit",
    "ComplexSearchResponse.seriesHit",
    "Manifestation.tableOfContents",
    "Manifestation.manifestationParts",
  ],
  "denyTypes": Array [
    "CheckOrderPolicy",
    "Availability",
    "SEO",
    "WorkExtensionUnion",
    "MarcRecord",
    "CreatorInfo",
  ],
}
`;
